Unified media queries.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -304,9 +304,6 @@ body {
   @media (max-width: 1280px) {
     .icon-menu {
       right: 15px; } }
-  @media (max-width: 854px) {
-    .icon-menu {
-      animation: menu-h-in .333s ease-out forwards !important; } }
   .icon-menu > svg {
     display: block;
     height: 100%;
@@ -328,14 +325,8 @@ body {
     border: 0 !important; }
     .icon-menu:hover rect {
       fill: #f03246; }
-      @media (max-width: 854px) {
-        .icon-menu:hover rect {
-          fill: #223347 !important; } }
-  @media (max-width: 854px) {
-    .icon-menu.nav-close {
-      position: fixed;
-      transform: translateZ(1px);
-      z-index: 10002; } }
+  .icon-menu.nav-close {
+    position: fixed; }
 
 @keyframes cross-l {
   0% {
@@ -352,23 +343,26 @@ body {
     transform: translateY(14.5px) rotate(45deg); }
   100% {
     transform: translateY(14.5px) rotate(45deg); } }
-  .icon-menu.nav-close rect:nth-child(odd) {
-    animation: cross-l .666s ease-out forwards; }
-  .icon-menu.nav-close rect:nth-child(even) {
-    animation: cross-r .666s ease-out forwards; }
-  @media (max-width: 854px) {
-    .icon-menu.nav-close rect {
-      fill: #223347 !important; }
-      .icon-menu.nav-close rect:nth-child(odd) {
-        animation: cross-l .666s ease-out forwards !important; }
-      .icon-menu.nav-close rect:nth-child(even) {
-        animation: cross-r .666s ease-out forwards !important; } }
+    .icon-menu.nav-close rect:nth-child(odd) {
+      animation: cross-l .666s ease-out forwards; }
+    .icon-menu.nav-close rect:nth-child(even) {
+      animation: cross-r .666s ease-out forwards; }
   .icon-menu.nav-close:hover rect {
     fill: #f03246;
     width: 32px; }
-    @media (max-width: 854px) {
+  @media (max-width: 854px) {
+    .icon-menu {
+      animation: menu-h-in .333s ease-out forwards !important; }
+      .icon-menu:hover rect {
+        fill: #223347 !important; }
       .icon-menu.nav-close:hover rect {
-        fill: #223347 !important; } }
+        fill: #223347 !important; }
+      .icon-menu.nav-close rect {
+        fill: #223347 !important; }
+        .icon-menu.nav-close rect:nth-child(odd) {
+          animation: cross-l .666s ease-out forwards !important; }
+        .icon-menu.nav-close rect:nth-child(even) {
+          animation: cross-r .666s ease-out forwards !important; } }
 
 body > .nav {
   background-color: white;
