--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -388,9 +388,10 @@ body > .nav {
         left: 0;
         position: fixed;
         right: 0;
+        transform: translateZ(-100px);
         top: 0;
         width: 100%;
-        z-index: -1; } }
+        z-index: -1000; } }
   body > .nav.closed {
     animation: menu-out .333s ease-in forwards; }
   body > .nav > ul {
@@ -422,7 +423,7 @@ body > .nav {
         line-height: 25vw; } }
   body > .nav a {
     transition: text-shadow 50ms; }
-    body > .nav a:hover, body > .nav a:focus {
+    body > .nav a:focus, body > .nav a:hover {
       border: 0;
       text-shadow: 4.5px 4.5px #f03246; }
 
