--- a/assets/sass/partials/base/_menu.scss
+++ b/assets/sass/partials/base/_menu.scss
@@ -8,10 +8,10 @@
 // Nav block
 // -----------------------------------------------------------------------------
 body > .nav {
-  background-color: $black;
+  background-color: $white;
   border: $distance solid $white;
   bottom: 0;
-  color: $white;
+  color: $black;
   height: $menu-height;
   left: 0;
   opacity: 0;
