--- a/assets/sass/partials/base/_menu-icon.scss
+++ b/assets/sass/partials/base/_menu-icon.scss
@@ -108,7 +108,7 @@
     background-color: transparent;
 
     rect {
-      fill: $white;
+      fill: $black;
 
 // Animation -------------------------------------------------------------------
 // scss-lint:disable NestingDepth
