--- a/assets/sass/partials/base/_general.scss
+++ b/assets/sass/partials/base/_general.scss
@@ -43,6 +43,7 @@ body {
   &.nav-opened {
     height: 100vh;
     overflow: hidden;
+    position: relative;
   }
 }
 // -----------------------------------------------------------------------------
