Test #7: Added position to the body.

--- a/assets/sass/partials/base/_general.scss
+++ b/assets/sass/partials/base/_general.scss
@@ -54,7 +54,7 @@ body {
   max-width: $site-box;
   min-height: $site-height;
   padding-top: $distance * 3;
-  position: relative;
+  // position: relative;
   width: 100%;
 }
 // -----------------------------------------------------------------------------
